tests/diagnostics/expressions/calls/missing_type_arguments/expect.txt
# exit: 1
lib.coppice:6:5: error: generic function 'make' requires 1 explicit type arguments
      make()
      ^
